blog post crud added and basic nav

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,8 +12,9 @@
     <div class="title__bar">
       <h1>Michael J Cooper</h1>  
     </div>
+    <br>
     <div class="main">
-      <pre><code class="javascript">function greeting() {
+      <pre class="code-container"><code class="javascript">function greeting() {
   return "Hello World!";
 }</code></pre>
     </div>
