--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-<%= yield %>
+	<div class="container">
+		<div class="nav navbar-nav">
+			<%== intellinav %>
+		</div>
+
+		<% if flash[:notice].present? %>
+			<h2><%= flash[:notice] %></h2>
+		<% end %>
+		
+		<%= yield %>
+	</div>
 
 </body>
 </html>
