--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,9 +3,41 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .codeContainer {
-  width: 40%;
+  text-align: left;
 }
 
-.nav {
+.container {
+	margin: 0 auto;
+	max-width: 750px;
+}
+
+.nav.navbar-nav {
 	width: 100%;
+	float: none;
+}
+
+.display-3 {
+	text-align: center;
+}
+
+.main {
+	text-align: center;
+}
+
+.title-content {
+  top: 40%;
+  position: absolute;
+  margin: 0 auto;
+  margin-top: -150px;
+  left: 50%;
+  margin-left: -280px;
+  box-shadow: 10px 10px 15px #888888;
+}
+
+.title-content h1 {
+	font-weight: 100;
+}
+
+.title__button {
+	margin-top: 1em;
 }
