--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,12 @@
 			<%== intellinav %>
 		</div>
 
-		<% if flash[:notice].present? %>
-			<h2><%= flash[:notice] %></h2>
-		<% end %>
+		<% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>"><%= value %></div>
+    <% end %>
 		
 		<%= yield %>
+
 	</div>
 
 </body>
