--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -5,7 +5,7 @@
   </p>
   <p>
     <%= f.label :content %>
-    <%= f.text_field :content %>
+    <%= f.text_area :content, class: "form-control", rows: 12 %>
   </p>
     <%= f.label :submit %>
     <%= f.submit %>
